syntax = "proto3";

package proto_user;

option go_package = "./;pb";

message User {
   string ID = 1;
   string Name = 2;
   string Email = 3;
   string CreatedAt = 5;
}

message NewRequestFindUser {
    string ID = 1;
}

message NewResponseFindUser{
    User user = 1;
}

service FindUserService {
    rpc FindUser (NewRequestFindUser) returns (NewResponseFindUser) {};
}