syntax = "proto3";

package proto_user;

option go_package = "./;pb";

message Customer {
   string ID = 1;
   string Name = 2;
   string Email = 3;
   string CreatedAt = 5;
}

message NewRequestGetUser {
    string ID = 1;
}

message NewResponseGetUser{
    Customer customer = 1;
}

service GetUserService {
    rpc GetUser (NewRequestGetUser) returns (NewResponseGetUser) {};
}